# custom_sub

./: .env.example  .gitignore  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.dev  pyproject.toml  test_output.txt
backend/alembic/: env.py
backend/alembic/versions/: 1a19e8da3d6b_add_payment_url_to_transactions.py  1e776950ed0d_add_support_messages.py  291527ff2561_seed_usdt_exchange_rate.py  64938a85a3cd_add_telegram_oidc_settings.py  744b110fd9e1_support_tickets.py  a1b2c3d4e5f6_add_email_verified.py  a2b3c4d5e6f7_add_phone_number_to_auth_providers.py  b2c3d4e5f6a7_add_is_banned.py  b3c4d5e6f7a8_seed_new_settings.py  c3d4e5f6a7b8_seed_auth_settings.py  d4e5f6a7b8c9_refactor_squad_settings.py  e5f6a7b8c9d0_seed_remnawave_api_settings.py  e7cbe1ed933e_initial_schema.py  f6a7b8c9d0e1_seed_cryptobot_enabled.py  f989da77bf10_seed_plans.py
backend/app/: config.py  database.py  deps.py  main.py  redis_client.py
backend/app/models/: __init__.py  article.py  auth_provider.py  plan.py  promo_code.py  setting.py  subscription.py  support_message.py  support_ticket.py  transaction.py  user.py
backend/app/routers/: admin.py  articles.py  auth.py  install.py  payments.py  plans.py  promo_codes.py  subscriptions.py  support.py  users.py
backend/app/schemas/: admin.py  article.py  auth.py  install.py  payment.py  plan.py  promo_code.py  subscription.py  support.py  user.py
backend/app/services/: admin_sync_service.py  email_service.py  encryption_service.py  payment_service.py  promo_code_service.py  (+8 more)
backend/tests/: conftest.py  test_deps.py
(+120 files in other folders)
